--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -38,7 +38,7 @@
         "permission_denied_bot_not_member": "O bot não está mais neste grupo/canal, portanto não funcionará aqui.",
         "permission_denied_switch_pm": "Continue na conversa privada com o bot…",
         "permission_denied_input_command": "Por favor, insira um comando para continuar…",
-        "permission_denied_no_direct_use": "Este comando não deve ser usado diretamente. Use /set em vez disso.",
+        "permission_denied_no_direct_use": "Este comando não deve ser usado diretamente. Use %s em vez disso.",
         "promote_to_admin_prompt": "Se você é um administrador anônimo deste grupo, por favor promova o bot a um administrador (não é necessária permissão) para capacitar o bot a verificar sua identidade.",
         "group_upgrade_needed_prompt": "Opa, seu grupo não foi atualizado para um supergrupo. Geralmente, o servidor telegrama deve executar automaticamente essa atualização em algum momento, mas se não, você tem que atualizá-lo manualmente antes de poder usar o bot.\nPor favor, siga estas etapas:\n1. Vá para as informações do grupo e clique em \"Gerenciar grupo\"\n2. Alterar \"Histórico de bate-papo para novos membros\" para \"Visível\"\n3. Salve a configuração de visibilidade do histórico do chat\n4. Salve todas as configurações\n5. (Opcional) Se necessário, você pode alterar \"Histórico de bate-papo para novos membros\" para \"Escondido\" novamente\n6. Agora você deve ser capaz de usar o bot",
         "sub_limit_reached_prompt": ""
@@ -197,6 +197,9 @@
         "user_not_found": "",
         "user_info": "",
         "sub_count": "",
+        "sub_limit": "",
+        "sub_limit_unlimited": "",
+        "sub_limit_default": "",
         "participant_count": "",
         "user_state": "",
         "user_state_-1": "",
@@ -205,7 +208,10 @@
         "user_state_description_0": "",
         "user_state_1": "",
         "user_state_description_1": "",
-        "set_user_state_as": ""
+        "set_user_state_as": "",
+        "reset_sub_limit_to_default": "",
+        "set_sub_limit_to": "",
+        "cmd_set_sub_limit_prompt_html": ""
     },
     "l10n_cmd_descriptions": {
         "commands": "",
