--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -38,7 +38,7 @@
         "permission_denied_bot_not_member": "Бот больше не состоит в группе/канале и не может работать с ней.",
         "permission_denied_switch_pm": "Продолжить в частном чате с ботом…",
         "permission_denied_input_command": "Пожалуйста, введите команду для продолжения…",
-        "permission_denied_no_direct_use": "Эта команда не должна использоваться напрямую. Используйте /set вместо неё.",
+        "permission_denied_no_direct_use": "Эта команда не должна использоваться напрямую. Используйте %s вместо неё.",
         "promote_to_admin_prompt": "Если вы анонимный админ этой группы, пожалуйста, попросите администратора подтвердить вашу личность (никаких разрешений не требуется).",
         "group_upgrade_needed_prompt": "",
         "sub_limit_reached_prompt": "Количество подписок достигло предела (%d/%d), установленного менеджером бота. Пожалуйста, удалите (/unsub) какие-нибудь подписки прежде, чем добавлять новые."
@@ -197,6 +197,9 @@
         "user_not_found": "Пользователь не найден. Попробуй поискать по ID.",
         "user_info": "Информация о пользователе",
         "sub_count": "Количество подписок",
+        "sub_limit": "",
+        "sub_limit_unlimited": "",
+        "sub_limit_default": "",
         "participant_count": "Количество участников",
         "user_state": "Состояние пользователя",
         "user_state_-1": "Забанен",
@@ -205,7 +208,10 @@
         "user_state_description_0": "может использовать бота только в многопользовательском режиме",
         "user_state_1": "Пользователь",
         "user_state_description_1": "может использовать бота",
-        "set_user_state_as": "Установить состояние пользователя"
+        "set_user_state_as": "Установить состояние пользователя",
+        "reset_sub_limit_to_default": "",
+        "set_sub_limit_to": "",
+        "cmd_set_sub_limit_prompt_html": ""
     },
     "l10n_cmd_descriptions": {
         "commands": "Команды",
