--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -39,9 +39,9 @@
         "permission_denied_switch_pm": "ボットとのプライベートチャットで続行します…",
         "permission_denied_input_command": "続行するにはコマンドを入力してください…",
         "permission_denied_no_direct_use": "このコマンドは直接使用しないでください。代わりに %s を使用してください。",
-        "promote_to_admin_prompt": "あなたがこのグループの匿名の管理者である場合は、ボットを管理者に昇格させ（権限は必要ありません）、ボットがあなたの身元を確認できるようにしてください。",
-        "group_upgrade_needed_prompt": "残念ながら、あなたのグループはスーパーグループには昇格していません。通常、Telegram のサーバーはどこかの時点で自動的にこれを行いますが、そうでない場合は、ボットを使用する前に手動でアップグレードする必要があります。\n次の手順に従ってください：\n1. グループ情報から「グループの管理」をクリックします。\n2. 「新しい相手への表示」を「見せる」に変更します。\n3. チャット履歴の表示設定を保存します。\n4. すべての設定を保存します。\n5. （オプショナル）必要に応じて、「新しい相手への表示」を再び「見せない」に変更できます。\n6. これで、ボットを使用できるようになります。",
-        "sub_limit_reached_prompt": "購読の数量が、ボット管理者によって適用した制限（%d/%d）に達しました。新しい購読を追加する前に、いくつかの購読を解除（ /unsub ）してください。"
+        "promote_to_admin_prompt": "あなたがこのグループの匿名の管理者である場合は、ボットを管理者に昇格させ (権限は必要ありません)、ボットがあなたの身元を確認できるようにしてください。",
+        "group_upgrade_needed_prompt": "残念ながら、あなたのグループはスーパーグループには昇格していません。通常、Telegram のサーバーはどこかの時点で自動的にこれを行いますが、そうでない場合は、ボットを使用する前に手動でアップグレードする必要があります。\n次の手順に従ってください: \n1. グループ情報から「グループの管理」をクリックします。\n2. 「新しい相手への表示」を「見せる」に変更します。\n3. チャット履歴の表示設定を保存します。\n4. すべての設定を保存します。\n5. (オプショナル) 必要に応じて、「新しい相手への表示」を再び「見せない」に変更できます。\n6. これで、ボットを使用できるようになります。",
+        "sub_limit_reached_prompt": "購読の数量が、ボット管理者によって適用した制限 (%d/%d) に達しました。新しい購読を追加する前に、いくつかの購読を解除 (/unsub) してください。"
     },
     "l10n_misc": {
         "choose_sub_prompt": "購読を選択してください",
@@ -78,9 +78,9 @@
         "unsub_all_successful": "すべての購読を解除しました"
     },
     "l10n_cmd_import": {
-        "send_opml_prompt": "インポートする OPML ファイルを送ってください（拡張子は .opml にする必要があります）。",
-        "import_for_channel_or_group_prompt": "チャンネル/グループの購読をインポートする場合は、キャプションにチャンネル/グループの ID（「-100」で始まる必要があります）または @username を入力してください。",
-        "send_opml_reply_placeholder": "インポートする OPML ファイル（拡張子は .opml にする必要があります）",
+        "send_opml_prompt": "インポートする OPML ファイルを送ってください (拡張子は .opml にする必要があります)。",
+        "import_for_channel_or_group_prompt": "チャンネル/グループの購読をインポートする場合は、キャプションにチャンネル/グループの ID (「-100」で始まる必要があります) または @username を入力してください。",
+        "send_opml_reply_placeholder": "インポートする OPML ファイル (拡張子は .opml にする必要があります)",
         "fetch_file_failed": "ファイルを取得できませんでした",
         "opml_import_processing": "フィードの量が多い場合、またはフィードのサーバーが遅い場合は、処理に時間がかかりますので、しばらくお待ちください。",
         "opml_parse_error": "OPML 解析エラー",
@@ -101,7 +101,7 @@
         "send_mode_0": "自動",
         "send_mode_1": "強制 Telegragh",
         "send_mode_2": "強制 Telegram メッセージ",
-        "length_limit": "長さ制限（自動モードのみ）",
+        "length_limit": "長さ制限 (自動モードのみ)",
         "length_limit_unlimited": "無制限",
         "link_preview": "リンクのプレビュー",
         "link_preview_-1": "無効",
@@ -110,7 +110,7 @@
         "display_media": "メディア",
         "display_media_-1": "無効",
         "display_media_0": "有効",
-        "display_media_1": "メディアのみ、コンテンツなし（メディアがある場合）",
+        "display_media_1": "メディアのみ、コンテンツなし (メディアがある場合)",
         "display_author": "著者",
         "display_author_-1": "無効",
         "display_author_0": "自動",
@@ -127,10 +127,10 @@
         "display_title_0": "自動",
         "display_title_1": "有効",
         "style": "スタイル",
-        "style_0": "RSStT",
-        "style_1": "flowerss",
+        "style_0": "",
+        "style_1": "",
         "set_custom_title_button": "カスタムタイトル…",
-        "set_custom_interval_button": "カスタム間隔（分単位）…",
+        "set_custom_interval_button": "カスタム間隔 (分単位)…",
         "set_custom_hashtags_button": "カスタムハッシュタグ…",
         "set_interval_prompt": "監視間隔を選択してください。",
         "set_length_limit_prompt": "長さ制限を選択してください。\n\n記事の長さが制限を超える場合や、一通のメッセージで送信できない場合は、Telegraph で送信されます。\nTelegraph での送信に失敗した場合は、そのタイトルとソースのみが送信されます。",
@@ -169,31 +169,31 @@
         "all_subs_are_deactivated": "すべての購読が無効になります。"
     },
     "l10n_cmd_set_title": {
-        "cmd_set_title_usage_prompt_html": "コマンドの使用法：<code>/set_title 購読ID タイトル</code>\n\n注：カスタムタイトルをクリアするには、<code>タイトル</code> を省略します（以前に設定した場合のみクリアされます）。",
-        "set_title_success": "購読のカスタムタイトルが次のように変更されました：",
+        "cmd_set_title_usage_prompt_html": "コマンドの使用法: <code>/set_title 購読ID タイトル</code>\n\n注: カスタムタイトルをクリアするには、<code>タイトル</code> を省略します (以前に設定した場合のみクリアされます)。",
+        "set_title_success": "購読のカスタムタイトルが次のように変更されました: ",
         "set_title_success_cleared": "購読のカスタムタイトルがクリアされました。"
     },
     "l10n_cmd_set_interval": {
-        "cmd_set_interval_usage_prompt_html": "コマンドの使用法：<code>/set_interval 購読ID 監視間隔</code>\n\n注：<code>監視間隔</code> は分単位の正の整数でなければなりません（単位は含まず）。",
+        "cmd_set_interval_usage_prompt_html": "コマンドの使用法: <code>/set_interval 購読ID 監視間隔</code>\n\n注: <code>監視間隔</code> は分単位の正の整数でなければなりません (単位は含まず)。",
         "set_interval_success_html": "購読の監視間隔が <b>%d 分</b> に変更されました。",
         "set_default_interval_success_html": "デフォルトの監視間隔が <b>%d 分</b> に変更されました。",
         "set_interval_failure_too_small_html": "監視間隔は <b>%d 分</b> 以上でなければならなりません。"
     },
     "l10n_cmd_set_hashtags": {
-        "cmd_set_hashtags_usage_prompt_html": "コマンドの使用法：<code>/set_hashtags 購読ID #ハッシュタグ1 #ハッシュタグ2 …</code>\n\n注：既存のハッシュタグをクリアするには、ハッシュタグを省略します（以前に設定した場合のみクリアされます）。",
-        "set_hashtags_success_html": "購読のカスタムハッシュタグは次のように変更されました：",
+        "cmd_set_hashtags_usage_prompt_html": "コマンドの使用法: <code>/set_hashtags 購読ID #ハッシュタグ1 #ハッシュタグ2 …</code>\n\n注: 既存のハッシュタグをクリアするには、ハッシュタグを省略します (以前に設定した場合のみクリアされます)。",
+        "set_hashtags_success_html": "購読のカスタムハッシュタグは次のように変更されました: ",
         "set_hashtags_success_cleared": "購読のカスタムハッシュタグがクリアされました。",
         "set_hashtags_failure_too_many": "ハッシュタグが多すぎます。いくつか削除して、再試行してください。"
     },
     "l10n_administration": {
-        "cmd_test_usage_prompt_html": "コマンドの使用法：<code>/test RSS_URL エントリー開始番号(オプショナル) エントリー終了番号(オプショナル)</code>",
-        "cmd_set_option_usage_prompt_html": "コマンドの使用法：<code>/set_option キー 値</code>",
+        "cmd_test_usage_prompt_html": "コマンドの使用法: <code>/test RSS_URL エントリー開始番号(オプショナル) エントリー終了番号(オプショナル)</code>",
+        "cmd_set_option_usage_prompt_html": "コマンドの使用法: <code>/set_option キー 値</code>",
         "current_options": "現在のオプション",
         "option_value_type": "値のタイプ",
         "option_key_invalid": "オプションのキーは無効です",
         "option_value_invalid": "オプションの値は無効です。タイプを確認してください",
         "option_updated": "オプションを更新しました",
-        "cmd_user_info_usage_prompt_html": "コマンドの使用法：<code>/user_info ユーザーID</code> または <code>/user_info @username</code>",
+        "cmd_user_info_usage_prompt_html": "コマンドの使用法: <code>/user_info ユーザーID</code> または <code>/user_info @username</code>",
         "user_not_found": "ユーザーが見つかりませんでした。代わりにユーザー ID を使用してください。",
         "user_info": "ユーザー情報",
         "sub_count": "購読数",
@@ -211,7 +211,7 @@
         "set_user_state_as": "ユーザー状態を次のように設定する",
         "reset_sub_limit_to_default": "購読数量制限をデフォルトにリセットする",
         "set_sub_limit_to": "購読数量制限を…に設定する",
-        "cmd_set_sub_limit_prompt_html": "コマンドの使用法：<code>/set_sub_limit ユーザーID 購読数量制限</code>\n\n注：<code>購読数量制限</code> は整数でなければなりません。無制限の場合は <code>-1</code> です。"
+        "cmd_set_sub_limit_prompt_html": "コマンドの使用法: <code>/set_sub_limit ユーザーID 購読数量制限</code>\n\n注: <code>購読数量制限</code> は整数でなければなりません。無制限の場合は <code>-1</code> です。"
     },
     "l10n_cmd_descriptions": {
         "commands": "コマンド",
@@ -228,9 +228,9 @@
         "cmd_description_version": "ボットのバージョンを見る",
         "cmd_description_lang": "言語を選択する",
         "cmd_description_help": "ヘルプを見る",
-        "cmd_description_test": "テスト（ボット管理者のみ）",
-        "cmd_description_set_option": "ボットのオプションを設定する（ボット管理者のみ）",
-        "cmd_description_user_info": "ユーザー情報を表示/変更する（ボット管理者のみ）",
-        "usage_in_channel_or_group_prompt_html": "<b>チャンネル/グループでの使用方法：</b>\n1. チャンネル/グループにボットを追加します。\n2a. <b>チャンネル／グループ</b>でコマンドを直接送信します。\n2b. または、<b>ボットとのプライベートチャットで</b> <code>/sub @username https://exmaple.com</code> や <code>/sub -10010000000000 https://exmaple.com</code> のようなコマンドを送信することもできます。\n（<code>@username</code> はチャンネル/グループのユーザー名です。<code>@</code> は必須です。<code>-10010000000000</code> はチャンネル/グループの ID で、<code>-100</code> で始まる必要があります。）"
+        "cmd_description_test": "テスト (ボット管理者のみ)",
+        "cmd_description_set_option": "ボットのオプションを設定する (ボット管理者のみ)",
+        "cmd_description_user_info": "ユーザー情報を表示/変更する (ボット管理者のみ)",
+        "usage_in_channel_or_group_prompt_html": "<b>チャンネル/グループでの使用方法:</b>\n1. チャンネル/グループにボットを追加します。\n2a. <b>チャンネル/グループ</b>でコマンドを直接送信します。\n2b. または、<b>ボットとのプライベートチャットで</b> <code>/sub @username https://example.com</code> や <code>/sub -10010000000000 https://example.com</code> のようなコマンドを送信することもできます。\n(<code>@username</code> はチャンネル/グループのユーザー名です。<code>@</code> は必須です。<code>-10010000000000</code> はチャンネル/グループの ID で、<code>-100</code> で始まる必要があります。)"
     }
 }
